View: Fix file naming, other cleanup

--- a/winproject/mupen64.vcxproj
+++ b/winproject/mupen64.vcxproj
@@ -196,20 +196,20 @@
         <ClInclude Include="..\view\gui\features\Runner.h"/>
         <ClInclude Include="..\view\gui\features\Seeker.h"/>
         <ClInclude Include="..\view\gui\features\Statusbar.hpp"/>
-        <ClInclude Include="..\view\gui\main_win.h"/>
+        <ClInclude Include="..\view\gui\Main.h" />
         <ClInclude Include="..\view\gui\wrapper\PersistentPathDialog.h"/>
         <ClInclude Include="..\view\lua\LuaConsole.h"/>
-        <ClInclude Include="..\view\lua\modules\avi.h"/>
-        <ClInclude Include="..\view\lua\modules\d2d.h"/>
-        <ClInclude Include="..\view\lua\modules\emu.h"/>
-        <ClInclude Include="..\view\lua\modules\global.h"/>
-        <ClInclude Include="..\view\lua\modules\input.h"/>
-        <ClInclude Include="..\view\lua\modules\iohelper.h"/>
-        <ClInclude Include="..\view\lua\modules\joypad.h"/>
-        <ClInclude Include="..\view\lua\modules\memory.h"/>
-        <ClInclude Include="..\view\lua\modules\movie.h"/>
-        <ClInclude Include="..\view\lua\modules\savestate.h"/>
-        <ClInclude Include="..\view\lua\modules\wgui.h"/>
+        <ClInclude Include="..\view\lua\modules\AVI.h" />
+        <ClInclude Include="..\view\lua\modules\D2D.h" />
+        <ClInclude Include="..\view\lua\modules\Emu.h" />
+        <ClInclude Include="..\view\lua\modules\Global.h" />
+        <ClInclude Include="..\view\lua\modules\Input.h" />
+        <ClInclude Include="..\view\lua\modules\IOHelper.h" />
+        <ClInclude Include="..\view\lua\modules\Joypad.h" />
+        <ClInclude Include="..\view\lua\modules\Memory.h" />
+        <ClInclude Include="..\view\lua\modules\Movie.h" />
+        <ClInclude Include="..\view\lua\modules\Savestate.h" />
+        <ClInclude Include="..\view\lua\modules\WGUI.h" />
         <ClInclude Include="..\view\lua\presenters\DCompPresenter.h" />
         <ClInclude Include="..\view\lua\presenters\GDIPresenter.h" />
         <ClInclude Include="..\view\lua\presenters\Presenter.h" />
@@ -290,7 +290,7 @@
         <ClCompile Include="..\view\gui\features\Statusbar.cpp" />
         <ClCompile Include="..\view\gui\FrontendService.cpp" />
         <ClCompile Include="..\view\gui\IOService.cpp" />
-        <ClCompile Include="..\view\gui\main_win.cpp" />
+        <ClCompile Include="..\view\gui\Main.cpp" />
         <ClCompile Include="..\view\gui\wrapper\PersistentPathDialog.cpp" />
         <ClCompile Include="..\view\lua\LuaConsole.cpp" />
         <ClCompile Include="..\view\lua\LuaService.cpp" />
