--- a/winproject/mupen64.vcxproj
+++ b/winproject/mupen64.vcxproj
@@ -170,7 +170,7 @@
         <ClInclude Include="..\shared\Config.hpp"/>
         <ClInclude Include="..\shared\helpers\IOHelpers.h" />
         <ClInclude Include="..\shared\helpers\StringHelpers.h" />
-        <ClInclude Include="..\shared\messenger.h"/>
+        <ClInclude Include="..\shared\Messenger.h" />
         <ClInclude Include="..\shared\services\FrontendService.h"/>
         <ClInclude Include="..\shared\services\IOService.h" />
         <ClInclude Include="..\shared\services\LuaService.h"/>
@@ -271,7 +271,7 @@
         <ClCompile Include="..\lib\speex\speex_resampler.c" />
         <ClCompile Include="..\lib\md5.c" />
         <ClCompile Include="..\shared\Config.cpp" />
-        <ClCompile Include="..\shared\messenger.cpp" />
+        <ClCompile Include="..\shared\Messenger.cpp" />
         <ClCompile Include="..\view\capture\encoders\AVIEncoder.cpp" />
         <ClCompile Include="..\view\capture\encoders\FFmpegEncoder.cpp" />
         <ClCompile Include="..\view\capture\EncodingManager.cpp" />
