View: Fix WiiVC mode naming

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -288,7 +288,7 @@ BEGIN
     CONTROL         "Audio Delay",IDC_ENABLE_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,210,96,8
     CONTROL         "Compiled Jump",IDC_ENABLE_COMPILED_JUMP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,222,96,8
     CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,222,96,8
-    CONTROL         "WiiVC Rounding",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,234,96,10
+    CONTROL         "WiiVC Mode",IDC_WIIVC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,234,96,10
     CONTROL         "Movie Backups",IDC_MOVIE_BACKUPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,234,96,10
     CONTROL         "Pause when unfocused",IDC_PAUSENOTACTIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,96,8
     GROUPBOX        "Capture",IDC_FPSTITLE2,6,79,215,83
