--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -276,38 +276,40 @@ IDD_MESSAGES DIALOGEX 0, 0, 231, 281
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "Interface",IDC_MESSAGES,6,6,216,42
-    GROUPBOX        "Flow",IDC_FPSTITLE,6,48,215,30
-    GROUPBOX        "Core",IDC_CPUCORE,6,162,216,101
-    CONTROL         "Interpreter",IDC_INTERP,"Button",BS_AUTORADIOBUTTON,12,174,96,8
-    CONTROL         "Dynamic Recompiler",IDC_RECOMP,"Button",BS_AUTORADIOBUTTON,12,187,96,8
-    CONTROL         "Pure Interpreter",IDC_PURE_INTERP,"Button",BS_AUTORADIOBUTTON,12,198,96,8
-    EDITTEXT        IDC_SKIPFREQ,114,60,78,12,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Fast forward skip frequency:",IDC_FASTFORWARDSKIPFREQ,12,60,96,12,SS_CENTERIMAGE
-    PUSHBUTTON      "?",IDC_SKIPFREQUENCY_HELP,198,60,14,12
-    CONTROL         "Audio Delay",IDC_ENABLE_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,210,96,8
-    CONTROL         "Compiled Jump",IDC_ENABLE_COMPILED_JUMP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,222,96,8
-    CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,222,96,8
-    CONTROL         "WiiVC Mode",IDC_WIIVC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,234,96,10
-    CONTROL         "Movie Backups",IDC_MOVIE_BACKUPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,234,96,10
+    GROUPBOX        "Interface",IDC_MESSAGES,6,6,216,36
+    GROUPBOX        "Flow",IDC_FPSTITLE,6,42,215,30
+    GROUPBOX        "Core",IDC_CPUCORE,6,174,216,101
+    CONTROL         "Interpreter",IDC_INTERP,"Button",BS_AUTORADIOBUTTON,12,186,96,8
+    CONTROL         "Dynamic Recompiler",IDC_RECOMP,"Button",BS_AUTORADIOBUTTON,12,198,96,8
+    CONTROL         "Pure Interpreter",IDC_PURE_INTERP,"Button",BS_AUTORADIOBUTTON,12,210,96,8
+    EDITTEXT        IDC_SKIPFREQ,114,54,78,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Fast forward skip frequency:",IDC_FASTFORWARDSKIPFREQ,12,54,96,12,SS_CENTERIMAGE
+    PUSHBUTTON      "?",IDC_SKIPFREQUENCY_HELP,198,54,14,12
+    CONTROL         "Audio Delay",IDC_ENABLE_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,222,96,8
+    CONTROL         "Compiled Jump",IDC_ENABLE_COMPILED_JUMP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,234,96,8
+    CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,234,96,8
+    CONTROL         "WiiVC Mode",IDC_WIIVC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,246,96,10
+    CONTROL         "Movie Backups",IDC_MOVIE_BACKUPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,246,96,10
     CONTROL         "Pause when unfocused",IDC_PAUSENOTACTIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,96,8
-    GROUPBOX        "Capture",IDC_FPSTITLE2,6,79,215,83
-    CONTROL         "Record resets",IDC_RECORD_RESETS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,91,100,8
-    CONTROL         "Emulate SD Card",IDC_USESUMMERCART,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,103,96,8
-    LTEXT           "Capture delay:",IDC_STATIC,114,91,49,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_CAPTUREDELAY,168,91,42,12,ES_AUTOHSCROLL | ES_NUMBER
+    GROUPBOX        "Capture",IDC_FPSTITLE2,6,72,215,102
+    CONTROL         "Record resets",IDC_RECORD_RESETS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,84,100,8
+    CONTROL         "Emulate SD Card",IDC_USESUMMERCART,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,96,96,8
+    LTEXT           "Capture delay:",IDC_STATIC,114,84,49,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_CAPTUREDELAY,168,84,42,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Statusbar 0-index",IDC_STATUSBARZEROINDEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,96,8
     CONTROL         "Autoincrement save slot",IDC_AUTOINCREMENTSAVESLOT,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,210,96,8
-    LTEXT           "CPU Clock Speed Multiplier",IDC_CLOCK_SPD_MULT,12,246,96,12,SS_CENTERIMAGE
-    COMBOBOX        IDC_COMBO_CLOCK_SPD_MULT,108,246,108,100,CBS_DROPDOWNLIST | WS_TABSTOP
-    COMBOBOX        IDC_ENCODE_MODE,12,127,96,100,CBS_DROPDOWNLIST | WS_TABSTOP
-    COMBOBOX        IDC_ENCODE_SYNC,120,127,96,100,CBS_DROPDOWNLIST | WS_TABSTOP
-    CONTROL         "Save video to savestates",IDC_SAVE_VIDEO_TO_ST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,115,96,8
-    LTEXT           "Max lag frames:",IDC_CLOCK_SPD_MULT2,114,174,54,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_EDIT_MAX_LAG,168,174,42,12,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Lua Presenter:",IDC_TEXT_LUA_PRESENTER,12,145,60,12,SS_CENTERIMAGE
-    COMBOBOX        IDC_COMBO_LUA_PRESENTER,66,145,150,100,CBS_DROPDOWNLIST | WS_TABSTOP
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,222,96,8
+    LTEXT           "CPU Clock Speed Multiplier",IDC_CLOCK_SPD_MULT,12,258,96,12,SS_CENTERIMAGE
+    COMBOBOX        IDC_COMBO_CLOCK_SPD_MULT,108,258,108,100,CBS_DROPDOWNLIST | WS_TABSTOP
+    COMBOBOX        IDC_ENCODE_MODE,12,120,96,100,CBS_DROPDOWNLIST | WS_TABSTOP
+    COMBOBOX        IDC_ENCODE_SYNC,120,120,96,100,CBS_DROPDOWNLIST | WS_TABSTOP
+    CONTROL         "Save video to savestates",IDC_SAVE_VIDEO_TO_ST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,108,96,8
+    LTEXT           "Max lag frames:",IDC_CLOCK_SPD_MULT2,114,186,54,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_EDIT_MAX_LAG,168,186,42,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Lua Presenter:",IDC_TEXT_LUA_PRESENTER,12,137,54,12,SS_CENTERIMAGE
+    COMBOBOX        IDC_COMBO_LUA_PRESENTER,66,137,150,100,CBS_DROPDOWNLIST | WS_TABSTOP
+    LTEXT           "Encoder:",IDC_TEXT_ENCODER,12,156,54,12,SS_CENTERIMAGE
+    COMBOBOX        IDC_COMBO_ENCODER,66,157,150,100,CBS_DROPDOWNLIST | WS_TABSTOP
 END
 
 IDD_MOVIE_DIALOG DIALOGEX 0, 0, 343, 218
