View: Fix broken font in lua input dialog

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -344,7 +344,7 @@ BEGIN
 END
 
 IDD_LUAINPUTPROMPT DIALOGEX 0, 0, 250, 200
-STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
 FONT 8, "Ms Shell Dlg", 0, 0, 0x0
 BEGIN
