--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -653,7 +653,7 @@ BEGIN
 END
 
 IDD_PIANO_ROLL DIALOGEX 0, 0, 409, 289
-STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Piano Roll"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
