View: Add messenger benchmark to debug menu

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -159,6 +159,7 @@ BEGIN
     POPUP "&Debug"
     BEGIN
         MENUITEM "Warp modify back 10f, press A",           IDM_DEBUG_WARP_MODIFY
+        MENUITEM "Benchmark messenger",                     IDM_BENCHMARK_MESSENGER
     END
 END
 
