--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,7 @@ name: MSBuild
 on: [push]
 
 env:
-  SOLUTION_FILE_PATH: winproject/mupen64.sln
-
-  BUILD_CONFIGURATION: Release 
+  DUMMY: a
 
 jobs:
   build:
@@ -19,7 +17,7 @@ jobs:
 
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+      run: msbuild winproject/mupen64.sln -t:rebuild -verbosity:diag -property:Configuration=Release
     - name: 'Upload Artifact'
       uses: actions/upload-artifact@v4
       with:
