Core: Avoid including spdlog in header
It internally includes Windows.h and pollutes the layer with its types...

--- a/winproject/mupen64.vcxproj
+++ b/winproject/mupen64.vcxproj
@@ -274,6 +274,7 @@
     <ClCompile Include="..\lib\md5.c" />
     <ClCompile Include="..\shared\AsyncExecutor.cpp" />
     <ClCompile Include="..\shared\Config.cpp" />
+    <ClCompile Include="..\shared\helpers\IOHelpers.cpp" />
     <ClCompile Include="..\shared\Messenger.cpp" />
     <ClCompile Include="..\view\capture\encoders\AVIEncoder.cpp" />
     <ClCompile Include="..\view\capture\encoders\FFmpegEncoder.cpp" />
