Build: Use preview VS for cloud builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,9 @@ jobs:
 
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v2
-
+      with:
+        vs-prerelease: true
+      
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: msbuild winproject/mupen64.sln -t:rebuild -verbosity:diag -property:Configuration=Release
