--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
 
     - name: Install Visual Studio 2022 Preview
       run: |
-        cd "C:\Program Files (x86)\Microsoft Visual Studio\Installer" \
+        cd "C:\Program Files (x86)\Microsoft Visual Studio\Installer"
         .\vs_installer.exe modify --channelId VisualStudio.17.Preview
 
     - name: Build
