--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Add MSBuild to PATH
+      uses: microsoft/setup-msbuild@v2
+      
     - name: Install Visual Studio 2022 Preview
       run: |
         cd "C:\Program Files (x86)\Microsoft Visual Studio\Installer"
