--- a/view/rsrc.rc
+++ b/view/rsrc.rc
@@ -503,6 +503,7 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,156,42,50,14
     LTEXT           "Seek to frame",IDC_STATIC,7,7,46,12,SS_CENTERIMAGE
     EDITTEXT        IDC_SEEKER_FRAME,60,6,144,12,ES_AUTOHSCROLL
+    LTEXT           "",IDC_SEEKER_SUBTEXT,7,25,200,13,SS_CENTERIMAGE
     LTEXT           "Idle",IDC_SEEKER_STATUS,7,42,91,13,SS_CENTERIMAGE
 END
 
