View: Show broken plugin count in config dialog plugin page

--- a/view/rsrc.rc
+++ b/view/rsrc.rc
@@ -255,6 +255,7 @@ BEGIN
     CONTROL         "",IDB_CONTROL,"Static",SS_BITMAP,13,80,15,13
     CONTROL         "",IDB_SOUND,"Static",SS_BITMAP,13,139,15,13
     CONTROL         "",IDB_RSP,"Static",SS_BITMAP,13,198,15,13
+    LTEXT           "",IDC_PLUGIN_WARNING,6,242,200,15
 END
 
 IDD_SETTINGS_GENERAL DIALOGEX 0, 0, 231, 281
