--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,5 +22,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: mupen-artifact
-        path: winproject/bin/mupen64.exe
+        path: winproject/Release/mupen64.exe
         retention-days: 7
