ConfigDialog: Add async plugin discovery
The config dialog should no longer freeze up while loading plugins.

--- a/view/rsrc.rc
+++ b/view/rsrc.rc
@@ -233,25 +233,25 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     GROUPBOX        "Video",IDC_GFXPLUGIN,6,6,215,53
-    COMBOBOX        IDC_COMBO_GFX,54,18,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Config",IDM_VIDEO_SETTINGS,54,36,48,15
-    PUSHBUTTON      "Test",IDGFXTEST,108,36,48,15
-    PUSHBUTTON      "About",IDGFXABOUT,162,36,48,15
+    COMBOBOX        IDC_COMBO_GFX,54,18,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP | WS_DISABLED
+    PUSHBUTTON      "Config",IDM_VIDEO_SETTINGS,54,36,48,15,WS_DISABLED
+    PUSHBUTTON      "Test",IDGFXTEST,108,36,48,15,WS_DISABLED
+    PUSHBUTTON      "About",IDGFXABOUT,162,36,48,15,WS_DISABLED
     GROUPBOX        "Input",IDC_INPUTPLUGIN,6,66,215,53
-    COMBOBOX        IDC_COMBO_INPUT,54,78,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Config",IDM_INPUT_SETTINGS,54,96,48,15
-    PUSHBUTTON      "Test",IDINPUTTEST,108,96,48,15
-    PUSHBUTTON      "About",IDINPUTABOUT,162,96,48,15
+    COMBOBOX        IDC_COMBO_INPUT,54,78,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP | WS_DISABLED
+    PUSHBUTTON      "Config",IDM_INPUT_SETTINGS,54,96,48,15,WS_DISABLED
+    PUSHBUTTON      "Test",IDINPUTTEST,108,96,48,15,WS_DISABLED
+    PUSHBUTTON      "About",IDINPUTABOUT,162,96,48,15,WS_DISABLED
     GROUPBOX        "Audio",IDC_SOUNDPLUGIN,6,126,215,53
-    COMBOBOX        IDC_COMBO_SOUND,54,138,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Config",IDM_AUDIO_SETTINGS,54,156,48,15
-    PUSHBUTTON      "Test",IDSOUNDTEST,108,156,48,15
-    PUSHBUTTON      "About",IDSOUNDABOUT,162,156,48,15
-    GROUPBOX        "RSP",IDC_RSPPLUGIN,6,186,215,53
-    COMBOBOX        IDC_COMBO_RSP,54,198,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Config",IDM_RSP_SETTINGS,54,216,48,15
-    PUSHBUTTON      "Test",IDRSPTEST,108,216,48,15
-    PUSHBUTTON      "About",IDRSPABOUT,162,216,48,15
+    COMBOBOX        IDC_COMBO_SOUND,54,138,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP | WS_DISABLED
+    PUSHBUTTON      "Config",IDM_AUDIO_SETTINGS,54,156,48,15,WS_DISABLED
+    PUSHBUTTON      "Test",IDSOUNDTEST,108,156,48,15,WS_DISABLED
+    PUSHBUTTON      "About",IDSOUNDABOUT,162,156,48,15,WS_DISABLED
+    GROUPBOX        "RSP",IDC_RSPPLUGIN,6,186,215,53,
+    COMBOBOX        IDC_COMBO_RSP,54,198,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP | WS_DISABLED
+    PUSHBUTTON      "Config",IDM_RSP_SETTINGS,54,216,48,15,WS_DISABLED
+    PUSHBUTTON      "Test",IDRSPTEST,108,216,48,15,WS_DISABLED
+    PUSHBUTTON      "About",IDRSPABOUT,162,216,48,15,WS_DISABLED
     CONTROL         "",IDB_DISPLAY,"Static",SS_BITMAP,13,21,15,13
     CONTROL         "",IDB_CONTROL,"Static",SS_BITMAP,13,80,15,13
     CONTROL         "",IDB_SOUND,"Static",SS_BITMAP,13,139,15,13
