--- a/view/rsrc.rc
+++ b/view/rsrc.rc
@@ -256,7 +256,8 @@ BEGIN
     CONTROL         "",IDB_CONTROL,"Static",SS_BITMAP,13,80,15,13
     CONTROL         "",IDB_SOUND,"Static",SS_BITMAP,13,139,15,13
     CONTROL         "",IDB_RSP,"Static",SS_BITMAP,13,198,15,13
-    LTEXT           "",IDC_PLUGIN_WARNING,6,242,200,15
+    LTEXT           "",IDC_PLUGIN_WARNING,8,242,200,13
+    PUSHBUTTON      "More...",IDC_PLUGIN_DISCOVERY_INFO,6,255,70,15
 END
 
 IDD_SETTINGS_GENERAL DIALOGEX 0, 0, 231, 281
@@ -299,6 +300,13 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,186,180,54,12
     PUSHBUTTON      "Cancel",IDCANCEL,126,180,54,12
     EDITTEXT        IDC_TEXTBOX_LUAPROMPT,6,6,234,168,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN
+END
+
+IDD_PLUGIN_DISCOVERY_RESULTS DIALOGEX 0, 0, 220, 250
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Plugin Discovery Results"
+FONT 8, "Ms Shell Dlg", 0, 0, 0x0
+BEGIN
 END
 
 IDD_COREDBG DIALOGEX 0, 0, 213, 252
