ConfigDialog/Fix: Plugin discovery details button not being disabled during discovery

--- a/view/rsrc.rc
+++ b/view/rsrc.rc
@@ -257,7 +257,7 @@ BEGIN
     CONTROL         "",IDB_SOUND,"Static",SS_BITMAP,13,139,15,13
     CONTROL         "",IDB_RSP,"Static",SS_BITMAP,13,198,15,13
     LTEXT           "",IDC_PLUGIN_WARNING,8,242,200,13
-    PUSHBUTTON      "More...",IDC_PLUGIN_DISCOVERY_INFO,6,255,70,15
+    PUSHBUTTON      "More...",IDC_PLUGIN_DISCOVERY_INFO,6,255,70,15,WS_DISABLED
 END
 
 IDD_SETTINGS_GENERAL DIALOGEX 0, 0, 231, 281
