--- a/winproject/mupen64.vcxproj
+++ b/winproject/mupen64.vcxproj
@@ -418,7 +418,7 @@
     <ResourceCompile Include="..\view\rsrc.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Manifest Include="app.manifest" />
+    <Manifest Include="..\view\app.manifest" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
